Add domain-based routing with priority handling and fallback to path routes
- Introduced `domainRoutes` configuration for mapping requests by the `Host` header.
- Enhanced `Router` to prioritize domain routes over path routes, with seamless fallback.
- Updated `ConfigLoader` to parse and validate `domainRoutes` entries, supporting case-insensitive matching.
- Revised tests to cover domain-based routing scenarios, including empty and edge cases.
- Expanded documentation to include domain routing setup, usage examples, and combined routing strategies.